# quantumforge

./: .gitignore  Cargo.toml  README.md
gqe/: Cargo.toml
gqe/src/: lib.rs  main.rs
python/: README.md  pyproject.toml
python/benchmarks/: compare_simulators.py  gqe_backends_comparison.py  plot_algorithms.py  vqe_backends_comparison.py
python/src/qhybrid_kernels/: __init__.py  circuit.py  conversions.py  noise.py  qiskit_adapter.py
python/tests/: test_basic_kernels.py  test_full_qiskit.py  test_qiskit_reference.py
rust_kernels/: Cargo.toml
rust_kernels/src/: circuit.rs  execution.rs  lib.rs
tensor_core/: Cargo.toml
tensor_core/src/: lib.rs
vqe/: Cargo.toml
vqe/src/: ansatz.rs  hamiltonian.rs  main.rs  optimizer.rs
