[package]
name = "gqe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gqe"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_pcg = "0.3"
ndarray = { workspace = true }
rust_kernels = { path = "../rust_kernels" }
thiserror = "1.0"
