[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "qhybrid-kernels"
version = "0.1.0"
description = "Python wrappers for ultra-fast Rust kernels used in quantum noise-model simulation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
]

[project.optional-dependencies]
qiskit = [
  "qiskit>=1.0",
  "qiskit-aer>=0.14",
]

[tool.maturin]
bindings = "pyo3"
manifest-path = "../rust_kernels/Cargo.toml"
python-source = "src"
module-name = "qhybrid_kernels.rust_kernels"

