[package]
name = "rust_kernels"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_kernels"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
ndarray = { workspace = true }
rand = "0.8"
rayon = "1.11"
tensor_core = { path = "../tensor_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
num-complex = "0.4"
num-traits = "0.2"
