[package]
name = "vqe"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argmin = { version = "0.10", features = ["serde1"] }
argmin-math = { version = "0.4", features = ["ndarray_v0_15"] }
ndarray = { workspace = true }
num-complex = "0.4"
thiserror = "1.0"
rust_kernels = { path = "../rust_kernels" }